--- a/Room/src/styles/AdminSystem.css
+++ b/Room/src/styles/AdminSystem.css
@@ -1,5 +1,4 @@
 #control-page form{
-    z-index: -1;
     margin-top:30px;
     animation: show 0.2s 0.9s ease 1 both;
 }
@@ -11,6 +10,7 @@
     font-size: 25px;
     width: 170px;
     color: rgb(124, 207, 180) !important;
+    /* z-index: -1; */
 }
 
 textarea{
@@ -35,6 +35,7 @@ textarea{
     border: 1px solid #eee;
     padding-left: 5px;
     transition: .3s border-color;
+    z-index: 2;
 }
 
 #control-page > form > div:nth-child(7){
